--- a/Dumbgeon.html
+++ b/Dumbgeon.html
@@ -23,7 +23,8 @@ var mouseWheelDeltaYFrame = 0
 
 window.addEventListener("wheel", event => mouseWheelDeltaYFrame = mouseWheelDeltaYFrame + event.deltaY);
 
-
+var RunJSPerFrame = ""
+var FPS = 60
 
 var cameraX = 0 
 var cameraY = 0
@@ -52,8 +53,9 @@ drawings.push([JSON.parse("[[[0.13,0.192],[0.138,0.208],[0.142,0.22],[0.144,0.23
 drawings.push([JSON.parse("[[[0.054,0.466],[0.074,0.47],[0.286,0.476],[0.456,0.486],[0.556,0.488],[0.708,0.49],[0.752,0.488],[0.756,0.486],[0.766,0.484],[0.79,0.48],[0.814,0.476],[0.83,0.472],[0.836,0.47],[0.858,0.472],[0.878,0.476]],[[0.454,0.078],[0.448,0.114],[0.446,0.154],[0.44,0.204],[0.446,0.61],[0.452,0.658],[0.466,0.742],[0.474,0.784],[0.476,0.808],[0.478,0.82],[0.48,0.824]],[]]"),-7])
 drawings.push([JSON.parse("[[[0.812,0.938],[0.808,0.93],[0.802,0.912],[0.792,0.89],[0.782,0.866],[0.77,0.834],[0.746,0.776],[0.716,0.714],[0.69,0.658],[0.67,0.614],[0.656,0.584],[0.644,0.558],[0.632,0.534],[0.616,0.494],[0.604,0.472],[0.59,0.446],[0.574,0.422],[0.566,0.41],[0.562,0.402],[0.56,0.4],[0.558,0.394],[0.556,0.392],[0.552,0.386],[0.548,0.38],[0.544,0.372],[0.54,0.366],[0.538,0.364],[0.536,0.358],[0.532,0.356],[0.53,0.352]],[[0.314,0.484],[0.322,0.492],[0.332,0.5],[0.342,0.51],[0.36,0.528],[0.378,0.548],[0.394,0.566],[0.414,0.586],[0.438,0.614],[0.46,0.634],[0.476,0.652],[0.498,0.67],[0.514,0.688],[0.532,0.706],[0.546,0.718],[0.558,0.728],[0.574,0.746],[0.584,0.756],[0.598,0.77],[0.612,0.784],[0.624,0.798],[0.642,0.814],[0.656,0.828],[0.67,0.844],[0.678,0.852],[0.684,0.858],[0.688,0.864],[0.694,0.87],[0.704,0.882],[0.714,0.89],[0.718,0.898],[0.722,0.902],[0.73,0.91],[0.738,0.916],[0.742,0.922],[0.75,0.926],[0.756,0.928],[0.758,0.93],[0.76,0.932],[0.764,0.934],[0.772,0.938],[0.776,0.94],[0.778,0.942],[0.782,0.946],[0.79,0.95],[0.798,0.952],[0.8,0.954],[0.804,0.956],[0.808,0.958],[0.812,0.96],[0.814,0.962],[0.818,0.964]],[[0.314,0.48],[0.32,0.484],[0.328,0.486],[0.338,0.488],[0.348,0.49],[0.364,0.488],[0.37,0.486],[0.382,0.482],[0.398,0.476],[0.414,0.468],[0.428,0.46],[0.438,0.448],[0.446,0.442],[0.454,0.432],[0.466,0.422],[0.472,0.41],[0.484,0.398],[0.486,0.392],[0.49,0.386],[0.494,0.38],[0.496,0.376],[0.5,0.37],[0.504,0.366],[0.506,0.362],[0.508,0.358],[0.51,0.352],[0.512,0.35],[0.514,0.348],[0.516,0.346],[0.518,0.344],[0.52,0.342],[0.522,0.338],[0.524,0.332]],[[0.516,0.336],[0.51,0.338],[0.48,0.334],[0.468,0.33],[0.452,0.324],[0.448,0.322],[0.442,0.32],[0.434,0.318],[0.424,0.314],[0.418,0.31],[0.412,0.304],[0.408,0.3],[0.402,0.296],[0.394,0.292],[0.384,0.286],[0.378,0.282],[0.37,0.274],[0.366,0.272],[0.362,0.27],[0.358,0.266],[0.352,0.262],[0.346,0.256],[0.34,0.248],[0.336,0.244],[0.332,0.236],[0.324,0.224],[0.318,0.214],[0.314,0.198],[0.306,0.18],[0.304,0.17],[0.302,0.164],[0.3,0.158],[0.298,0.152],[0.294,0.142],[0.29,0.124],[0.288,0.114],[0.284,0.108],[0.282,0.104],[0.28,0.092]],[[0.31,0.48],[0.304,0.476],[0.3,0.474],[0.296,0.47],[0.292,0.464],[0.286,0.458],[0.282,0.45],[0.276,0.44],[0.272,0.432],[0.27,0.422],[0.262,0.408],[0.256,0.394],[0.252,0.382],[0.25,0.372],[0.248,0.362],[0.244,0.354],[0.242,0.338],[0.24,0.328],[0.238,0.318],[0.236,0.296],[0.232,0.284],[0.23,0.272],[0.228,0.262],[0.232,0.196],[0.234,0.19],[0.238,0.176],[0.242,0.168],[0.244,0.16],[0.248,0.154],[0.252,0.144],[0.254,0.14],[0.258,0.13],[0.26,0.122],[0.262,0.118],[0.266,0.11],[0.268,0.104],[0.27,0.1],[0.272,0.094],[0.274,0.092],[0.276,0.09]],[[0.266,0.196],[0.268,0.204],[0.272,0.218],[0.274,0.228],[0.278,0.234],[0.282,0.244],[0.288,0.252],[0.294,0.258],[0.302,0.266],[0.308,0.272],[0.318,0.28],[0.324,0.286],[0.33,0.29],[0.334,0.292],[0.338,0.296],[0.342,0.298],[0.344,0.3],[0.348,0.304],[0.352,0.308],[0.356,0.31],[0.358,0.312]],[[0.25,0.27],[0.252,0.28],[0.256,0.294],[0.264,0.306],[0.276,0.324],[0.288,0.34],[0.3,0.358],[0.308,0.368],[0.314,0.374],[0.318,0.38],[0.32,0.382]],[[0.308,0.314],[0.316,0.322],[0.322,0.332],[0.332,0.342],[0.346,0.356],[0.356,0.366],[0.362,0.372],[0.368,0.376],[0.372,0.378]],[]]"),-8])
 drawings.push([JSON.parse("[[[0.056,0.03],[0.054,0.052],[0.052,0.074],[0.054,0.12],[0.06,0.142],[0.07,0.162],[0.078,0.172],[0.084,0.18],[0.09,0.186],[0.102,0.198],[0.116,0.212],[0.148,0.224],[0.17,0.222],[0.188,0.216],[0.2,0.21],[0.21,0.206],[0.224,0.196],[0.236,0.182],[0.246,0.166],[0.252,0.152],[0.258,0.14],[0.26,0.124],[0.262,0.084],[0.264,0.07],[0.266,0.066]],[[0.444,0.044],[0.418,0.046],[0.414,0.05],[0.41,0.062],[0.416,0.106],[0.432,0.13],[0.438,0.136],[0.444,0.14],[0.446,0.144],[0.45,0.15],[0.452,0.154],[0.454,0.156],[0.448,0.164],[0.444,0.168],[0.434,0.174],[0.422,0.18],[0.41,0.186],[0.402,0.19],[0.392,0.192],[0.386,0.196],[0.354,0.192]],[[0.688,0.036],[0.686,0.058],[0.684,0.122],[0.686,0.198],[0.688,0.208],[0.69,0.222],[0.692,0.228],[0.712,0.222],[0.72,0.22],[0.736,0.216],[0.76,0.212],[0.788,0.206],[0.808,0.204],[0.836,0.208],[0.856,0.204]],[[0.686,0.114],[0.696,0.108],[0.718,0.104],[0.738,0.102],[0.824,0.098],[0.842,0.096],[0.852,0.094],[0.854,0.092]],[[0.686,0.038],[0.692,0.036],[0.716,0.038],[0.73,0.04],[0.81,0.042],[0.824,0.044],[0.85,0.046],[0.864,0.048]],[[0.17,0.95],[0.172,0.948],[0.18,0.938],[0.188,0.924],[0.194,0.91],[0.204,0.898],[0.208,0.888],[0.216,0.876],[0.224,0.86],[0.234,0.836],[0.252,0.806],[0.262,0.794],[0.268,0.78],[0.276,0.764],[0.284,0.744],[0.296,0.722],[0.304,0.706],[0.316,0.694],[0.322,0.682],[0.326,0.672],[0.328,0.664],[0.33,0.66],[0.332,0.654],[0.338,0.646],[0.34,0.642],[0.344,0.636],[0.346,0.63],[0.348,0.626],[0.35,0.622],[0.352,0.62],[0.354,0.616],[0.356,0.612],[0.358,0.608],[0.362,0.602],[0.364,0.596],[0.366,0.59],[0.372,0.582],[0.376,0.576],[0.382,0.566],[0.384,0.562],[0.386,0.556],[0.388,0.552],[0.392,0.548]],[[0.386,0.552]],[[0.168,0.952],[0.17,0.948],[0.202,0.946],[0.232,0.95],[0.242,0.952],[0.26,0.958],[0.278,0.96],[0.294,0.962],[0.348,0.964],[0.37,0.968],[0.392,0.972],[0.422,0.974],[0.706,0.976],[0.774,0.974],[0.804,0.972],[0.808,0.97],[0.814,0.968]],[[0.808,0.96],[0.804,0.948],[0.792,0.924],[0.78,0.908],[0.772,0.892],[0.768,0.882],[0.76,0.872],[0.746,0.85],[0.726,0.82],[0.708,0.796],[0.702,0.78],[0.698,0.772],[0.692,0.762],[0.68,0.742],[0.664,0.716],[0.658,0.708],[0.654,0.7],[0.65,0.692],[0.646,0.682],[0.638,0.672],[0.634,0.666],[0.632,0.662],[0.628,0.656],[0.622,0.646],[0.614,0.632],[0.608,0.624],[0.604,0.616],[0.602,0.612],[0.6,0.606],[0.598,0.6],[0.596,0.596],[0.594,0.594],[0.592,0.588],[0.59,0.584],[0.588,0.58],[0.586,0.576],[0.584,0.57],[0.582,0.564],[0.58,0.56],[0.578,0.558]],[[0.574,0.552],[0.568,0.532],[0.566,0.482],[0.568,0.456],[0.57,0.444],[0.572,0.432]],[[0.388,0.54],[0.384,0.528],[0.382,0.522],[0.38,0.51],[0.378,0.488]],[[0.376,0.424],[0.374,0.444]],[[0.378,0.426],[0.336,0.428],[0.326,0.43],[0.314,0.432],[0.286,0.43],[0.282,0.428],[0.284,0.416],[0.286,0.394],[0.288,0.386],[0.29,0.366],[0.324,0.368],[0.338,0.37],[0.348,0.372],[0.36,0.374],[0.372,0.378],[0.384,0.38],[0.394,0.382],[0.4,0.384],[0.454,0.386],[0.472,0.388],[0.484,0.39],[0.52,0.392],[0.54,0.394],[0.568,0.4],[0.606,0.402],[0.634,0.4],[0.648,0.398],[0.658,0.396],[0.664,0.394],[0.686,0.392],[0.688,0.398],[0.686,0.414],[0.684,0.42],[0.68,0.426],[0.678,0.428],[0.676,0.43],[0.672,0.432],[0.67,0.434],[0.666,0.436],[0.66,0.438],[0.648,0.44],[0.634,0.438],[0.626,0.436],[0.616,0.434],[0.586,0.432],[0.576,0.43],[0.552,0.426]],[[0.338,0.642],[0.346,0.638],[0.354,0.634],[0.362,0.63],[0.376,0.626],[0.392,0.632],[0.398,0.644],[0.4,0.652],[0.402,0.66],[0.408,0.672],[0.414,0.67],[0.422,0.664],[0.432,0.658],[0.446,0.648],[0.458,0.644],[0.462,0.642],[0.464,0.654],[0.468,0.662],[0.476,0.666],[0.488,0.668],[0.504,0.666],[0.516,0.664],[0.526,0.658],[0.542,0.656],[0.552,0.66],[0.558,0.666],[0.568,0.672],[0.58,0.674],[0.602,0.668],[0.608,0.66],[0.614,0.654],[0.616,0.652],[0.618,0.65],[0.622,0.654],[0.624,0.656],[0.628,0.658]],[[0.364,0.734],[0.358,0.736],[0.356,0.738],[0.354,0.74],[0.352,0.744],[0.354,0.78],[0.356,0.784],[0.36,0.788],[0.368,0.79],[0.378,0.788],[0.384,0.784],[0.394,0.776],[0.4,0.772],[0.404,0.77],[0.402,0.76],[0.4,0.756],[0.392,0.752],[0.382,0.746],[0.38,0.744],[0.37,0.74],[0.362,0.738],[0.358,0.736]],[[0.534,0.826],[0.53,0.828],[0.522,0.83],[0.516,0.836],[0.512,0.842],[0.51,0.846],[0.508,0.85],[0.506,0.858],[0.51,0.866],[0.518,0.868],[0.524,0.872],[0.536,0.878],[0.566,0.874],[0.568,0.866],[0.566,0.862],[0.564,0.858],[0.56,0.854],[0.556,0.844],[0.552,0.838],[0.548,0.834],[0.544,0.832],[0.54,0.83]],[[0.376,0.902],[0.366,0.91],[0.36,0.922],[0.364,0.938],[0.396,0.932],[0.41,0.93],[0.416,0.926],[0.42,0.924],[0.422,0.922],[0.42,0.91],[0.412,0.9],[0.4,0.89],[0.394,0.886],[0.392,0.884]],[[0.462,0.522],[0.456,0.528],[0.45,0.534],[0.448,0.542],[0.444,0.55],[0.44,0.556],[0.442,0.568],[0.462,0.566],[0.466,0.564],[0.468,0.562],[0.466,0.552]],[[0.54,0.594],[0.528,0.596],[0.526,0.6],[0.532,0.62],[0.534,0.622],[0.562,0.618],[0.568,0.616],[0.57,0.612],[0.572,0.61],[0.566,0.598],[0.56,0.594],[0.552,0.592]],[[0.372,0.435],[0.374,0.441],[0.376,0.457],[0.378,0.473],[0.38,0.481],[0.382,0.491],[0.384,0.501],[0.386,0.511],[0.388,0.521],[0.39,0.529],[0.392,0.541]],[]]"),-9])
-
-
+drawings.push([JSON.parse("[[[0.086,0.172],[0.126,0.17],[0.154,0.168],[0.36,0.16],[0.382,0.152],[0.404,0.142],[0.412,0.138],[0.416,0.136]],[[0.26,0.16],[0.266,0.182],[0.272,0.208],[0.28,0.24],[0.286,0.274],[0.274,0.388],[0.262,0.424],[0.25,0.458],[0.24,0.492],[0.23,0.514],[0.212,0.538],[0.19,0.554],[0.166,0.572],[0.138,0.592],[0.108,0.608],[0.092,0.614],[0.078,0.616],[0.062,0.614]],[[0.712,0.114],[0.66,0.126],[0.648,0.144],[0.636,0.176],[0.628,0.208],[0.626,0.244],[0.636,0.286],[0.656,0.326],[0.676,0.354],[0.696,0.378],[0.714,0.396],[0.728,0.416],[0.736,0.432],[0.74,0.456],[0.734,0.48],[0.72,0.492],[0.704,0.508],[0.682,0.522],[0.656,0.538],[0.63,0.548],[0.598,0.552],[0.568,0.554],[0.488,0.556],[0.482,0.554],[0.468,0.542]],[]]"),-10])
+drawings.push([JSON.parse("[[[0.144,0.253],[0.184,0.248],[0.21,0.238],[0.24,0.23],[0.27,0.225],[0.298,0.223],[0.33,0.221],[0.394,0.209],[0.442,0.198],[0.494,0.184],[0.556,0.177],[0.594,0.171],[0.616,0.167],[0.626,0.165],[0.63,0.163]],[[0.35,0.217],[0.36,0.225],[0.372,0.24],[0.382,0.263],[0.392,0.292],[0.398,0.322],[0.402,0.357],[0.392,0.495],[0.376,0.537],[0.356,0.574],[0.338,0.601],[0.316,0.628],[0.3,0.643],[0.286,0.653],[0.268,0.658],[0.256,0.662]],[[0.776,0.167],[0.77,0.171],[0.764,0.177],[0.756,0.188],[0.744,0.203],[0.736,0.225],[0.732,0.263],[0.742,0.294],[0.76,0.317],[0.776,0.336],[0.794,0.351],[0.812,0.37],[0.826,0.39],[0.84,0.415],[0.852,0.44],[0.862,0.464],[0.866,0.488],[0.868,0.507],[0.866,0.536],[0.86,0.547],[0.85,0.555],[0.832,0.562],[0.81,0.564],[0.782,0.568],[0.754,0.57],[0.684,0.564]],[[0.478,0.856],[0.472,0.86],[0.468,0.862],[0.456,0.864],[0.446,0.866],[0.368,0.864],[0.348,0.862],[0.336,0.858],[0.322,0.856],[0.304,0.85],[0.278,0.839],[0.248,0.827],[0.214,0.816],[0.194,0.808],[0.184,0.802],[0.174,0.793],[0.164,0.781],[0.152,0.766],[0.144,0.756],[0.138,0.745],[0.128,0.729],[0.116,0.706],[0.102,0.683],[0.092,0.666],[0.082,0.653],[0.078,0.637],[0.07,0.614],[0.058,0.576],[0.05,0.549],[0.042,0.526],[0.034,0.499],[0.026,0.464],[0.02,0.434],[0.028,0.29],[0.04,0.269],[0.048,0.253],[0.052,0.24],[0.058,0.228],[0.064,0.217],[0.072,0.205],[0.082,0.196],[0.094,0.184],[0.104,0.171],[0.114,0.159],[0.122,0.15],[0.13,0.14],[0.15,0.125],[0.168,0.117],[0.184,0.111],[0.204,0.104],[0.22,0.096],[0.238,0.084],[0.262,0.075],[0.288,0.063],[0.312,0.056],[0.33,0.05],[0.344,0.044],[0.366,0.038],[0.406,0.033],[0.436,0.029],[0.452,0.027],[0.46,0.025],[0.468,0.023],[0.55,0.025],[0.578,0.027],[0.634,0.029],[0.646,0.031],[0.67,0.033],[0.696,0.038],[0.724,0.048],[0.736,0.05],[0.738,0.052],[0.744,0.054],[0.746,0.056],[0.756,0.06],[0.768,0.061],[0.776,0.063],[0.786,0.065],[0.8,0.075],[0.82,0.084],[0.832,0.092],[0.846,0.1],[0.856,0.113],[0.866,0.121],[0.874,0.129],[0.878,0.132],[0.882,0.138],[0.89,0.148],[0.894,0.154],[0.898,0.161],[0.902,0.171],[0.912,0.192],[0.922,0.205],[0.928,0.215],[0.93,0.223],[0.934,0.23],[0.94,0.242],[0.944,0.253],[0.948,0.261],[0.95,0.269],[0.954,0.28],[0.958,0.294],[0.964,0.309],[0.97,0.33],[0.974,0.342],[0.978,0.357],[0.98,0.395],[0.982,0.42],[0.984,0.443],[0.978,0.57],[0.974,0.585],[0.972,0.595],[0.968,0.61],[0.962,0.62],[0.958,0.633],[0.954,0.643],[0.95,0.653],[0.942,0.664],[0.932,0.678],[0.922,0.697],[0.912,0.71],[0.898,0.733],[0.882,0.747],[0.868,0.758],[0.854,0.774],[0.842,0.785],[0.832,0.795],[0.822,0.804],[0.81,0.814],[0.798,0.821],[0.786,0.827],[0.776,0.831],[0.766,0.835],[0.746,0.841],[0.734,0.846],[0.726,0.852],[0.714,0.854],[0.706,0.858],[0.694,0.862],[0.68,0.866],[0.664,0.871],[0.642,0.873],[0.594,0.875],[0.548,0.871],[0.544,0.868],[0.55,0.846],[0.558,0.831],[0.574,0.81],[0.584,0.797],[0.594,0.785],[0.604,0.775],[0.612,0.766],[0.618,0.754],[0.624,0.745],[0.634,0.733],[0.64,0.726],[0.648,0.716],[0.652,0.71],[0.654,0.706]],[[0.538,0.866],[0.548,0.877],[0.554,0.883],[0.558,0.889],[0.568,0.9],[0.58,0.914],[0.592,0.927],[0.604,0.937],[0.616,0.948],[0.634,0.964],[0.65,0.977],[0.658,0.987],[0.662,0.99],[0.664,0.992],[0.666,0.994],[0.668,0.996],[0.67,1]],[]]"),-11])
+drawings.push([JSON.parse("[[[0.56,0.874],[0.558,0.878],[0.552,0.88],[0.548,0.884],[0.546,0.888],[0.542,0.894],[0.532,0.902],[0.516,0.904],[0.446,0.884],[0.408,0.866],[0.354,0.832],[0.29,0.786],[0.224,0.726],[0.166,0.672],[0.142,0.652],[0.138,0.648],[0.14,0.61],[0.144,0.434],[0.166,0.386],[0.204,0.326],[0.25,0.266],[0.298,0.212],[0.354,0.168],[0.42,0.138],[0.498,0.114],[0.558,0.102],[0.664,0.112],[0.734,0.146],[0.842,0.234],[0.908,0.314],[0.946,0.392],[0.958,0.452],[0.952,0.58],[0.946,0.664],[0.926,0.736],[0.892,0.786],[0.846,0.826],[0.802,0.856],[0.76,0.876],[0.688,0.886],[0.504,0.884],[0.406,0.888],[0.382,0.88]],[[0.554,0.492],[0.558,0.49],[0.568,0.494],[0.57,0.498],[0.574,0.51],[0.572,0.52],[0.566,0.522],[0.548,0.516],[0.546,0.502],[0.552,0.488]],[[0.564,0.482],[0.566,0.352],[0.568,0.328],[0.572,0.3],[0.574,0.28],[0.576,0.256],[0.578,0.21],[0.58,0.204]],[[0.57,0.506],[0.576,0.504],[0.59,0.498],[0.608,0.492],[0.622,0.488],[0.634,0.484],[0.65,0.478],[0.674,0.468],[0.694,0.458],[0.72,0.452],[0.748,0.446],[0.782,0.444],[0.786,0.442],[0.79,0.44],[0.796,0.436],[0.806,0.432],[0.818,0.426],[0.832,0.42],[0.836,0.416]],[]]"),-12])
 
 //created by Daxturus
 
@@ -101,6 +103,40 @@ function invSearch(obj)
 		return out;
 }
 
+//thanks MDN web docs <3
+function fastParse(obj){
+    return Function('"use strict";return '+obj)();
+}
+fastParse("console.log('Testing')")
+//i gotta start using this instead of copy pasting
+function drawSomething(wantedUUIDOfDrawing, dx, dy, dsx, dsy)
+{
+	for (var i = 0; i < drawings.length; i++)
+	{
+			if (drawings[i][1] == wantedUUIDOfDrawing)
+			{
+					drawingIndex = i
+			}
+	}
+	for (var i = 0; i < drawings[drawingIndex][0].length; i++)
+	{
+		//points
+		if (drawings[drawingIndex][0][i][0])
+		{
+			var startInd = 0
+			canvas.beginPath()
+			canvas.moveTo(dx + drawings[drawingIndex][0][i][startInd][0]  * dsx, dy + drawings[drawingIndex][0][i][startInd][1] * dsy)
+			for (var k = startInd+1; k < drawings[drawingIndex][0][i].length; k++)
+			{
+				if (Math.random() > drawJitter || k >= drawings[drawingIndex][0][i].length - 1)
+				{
+					canvas.lineTo(dx + drawings[drawingIndex][0][i][k][0] * dsx, dy + drawings[drawingIndex][0][i][k][1] * dsy)
+				}
+			}
+			canvas.stroke()
+		}
+	}
+}
 
 //object structure:
 //x (An object's X position.)
@@ -613,26 +649,15 @@ document.addEventListener("keyup", e => {
 
 
 
-//yes i stole this 60fps code, havent used JS for a while now
-//credit to MarkE and Klaider
-var stop = false;
-var frameCount = 0;
-var fps, fpsInterval, startTime, now, then, elapsed;
+var startTime, now, then, elapsed;
 
-
-function startAnimating(fps) {
-    fpsInterval = 1000 / fps;
-    then = Date.now();
-    startTime = then;
-    animate();
-}
 
 function animate() {
     requestAnimationFrame(animate);
     now = Date.now();
     elapsed = now - then;
-    if (elapsed > fpsInterval) {
-        then = now - (elapsed % fpsInterval);
+    if (elapsed > (1000/FPS)) {
+        then = now - (elapsed % (1000/FPS));
 		
 		
 		
@@ -820,13 +845,13 @@ function animate() {
 		canvas.rect(401,1,198,398)
 		canvas.stroke()
 		canvas.beginPath()
-		canvas.rect(0,0,100,50)
+		canvas.rect(0,0,105,50)
 		canvas.stroke()
 		canvas.beginPath()
 		canvas.rect(350,0,50,50)
 		canvas.stroke()
 		canvas.beginPath()
-		canvas.rect(100,0,300,50)
+		canvas.rect(105,0,295,50)
 		canvas.stroke()
 		//held object
 		if (draggingObjectUUID != null)
@@ -1075,6 +1100,83 @@ function animate() {
 					}
 				}
 			}
+		}
+		
+		if (cursorX >= 350 && cursorX <= 400 && cursorY >= 0 && cursorY <= 50)
+		{
+			if (draggingObjectUUID != null)
+			{
+				if (mouseDown)
+				{
+					var draggedObjectInd = -1
+					for (var j = 0; j < objects.length; j++)
+					{
+						if (objects[j].UUID == draggingObjectUUID)
+						{
+							draggedObjectInd = j
+						}
+					}
+					if (draggedObjectInd != -1)
+					{
+						prevActions.push([18,JSON.parse(JSON.stringify(objects[draggedObjectInd]))])
+						objects.splice(draggedObjectInd,1)
+						draggingObjectUUID = null
+					}
+				}
+			}
+		}
+		
+		canvas.beginPath()
+		canvas.rect(5,6,15,15)
+		canvas.rect(25,6,15,15)
+		canvas.rect(45,6,15,15)
+		canvas.rect(65,6,15,15)
+		canvas.rect(85,6,15,15)
+		canvas.rect(5,29,15,15)
+		canvas.rect(25,29,15,15)
+		canvas.rect(45,29,15,15)
+		canvas.rect(65,29,15,15)
+		canvas.rect(85,29,15,15)
+		canvas.stroke()
+		drawSomething(-10,5,29,15,15)
+		drawSomething(-11,25,29,15,15)
+		drawSomething(-12,45,29,15,15)
+		if (cursorX >= 5 && cursorX <= 20 && cursorY >= 29 && cursorY <= 29+15)
+		{
+			if (mouseDown)
+			{
+				fastParse(window.prompt("Enter JavaScript to run once:"))
+				mouseDown = false
+			}
+		}
+		if (cursorX >= 25 && cursorX <= 40 && cursorY >= 29 && cursorY <= 29+15)
+		{
+			if (mouseDown)
+			{
+				RunJSPerFrame = window.prompt("Enter JavaScript to run every frame:",RunJSPerFrame)
+				mouseDown = false
+			}
+		}
+		if (cursorX >= 45 && cursorX <= 60 && cursorY >= 29 && cursorY <= 29+15)
+		{
+			if (mouseDown)
+			{
+				var setTheFPSToThis = window.prompt("Change the frames rendered per second limit:",FPS)
+				if (isNaN(setTheFPSToThis))
+				{
+					alert("Number in incorrect format (try 60, 30, 13.37)")
+				}
+				else
+				{
+						FPS = Number(setTheFPSToThis)
+				}
+				mouseDown = false
+			}
+		}
+		try {
+			fastParse(RunJSPerFrame)
+		} catch (error) {
+			console.error(error);
 		}
 		canvas.fillStyle = "#000000"
 		if (cursorX >= 400 && cursorX <= 600)
@@ -1638,6 +1740,8 @@ function animate() {
 		
     }
 }
-startAnimating(60);
+then = Date.now();
+startTime = then;
+animate()
 
 </script>
