--- a/Dumbgeon.html
+++ b/Dumbgeon.html
@@ -1270,18 +1270,18 @@ function animate() {
 		if (selectedObjectUUID <= -1)
 		{
 			canvas.fillText("Dumbgeon!: ",405,10+scrollY)
-			canvas.fillText("by Daxturus",405,25+scrollY)
-			canvas.fillText("Controls: ",405,40+scrollY)
-			canvas.fillText("Press N to create an object",405,55+scrollY)
-			canvas.fillText("Click on an object to drag it",405,70+scrollY)
-			canvas.fillText("Shift-click on an object to select it",405,85+scrollY)
-			canvas.fillText("Press/hold T to create terrain",405,100+scrollY)
-			canvas.fillText("Hold X and click to delete objects",405,115+scrollY)
-			canvas.fillText("Press P and hold mouse to paint objects",405,130+scrollY)
-			canvas.fillText("Press J to import picture from JSON",405,145+scrollY)
-			canvas.fillText("Press L to select a drawing to paint with",405,160+scrollY)
-			canvas.fillText("Press Z to undo most actions",405,175+scrollY)
-			canvas.fillText("WASD to move the screen",405,190+scrollY)
+			canvas.fillText("By Daxturus",405,25+scrollY)
+			canvas.fillText("Controls: ",405,50+scrollY)
+			canvas.fillText("Press N to create an object",405,65+scrollY)
+			canvas.fillText("Click on an object to drag it",405,80+scrollY)
+			canvas.fillText("Shift-click on an object to select it",405,95+scrollY)
+			canvas.fillText("Press/hold T to create terrain",405,110+scrollY)
+			canvas.fillText("Hold X and click to delete objects",405,125+scrollY)
+			canvas.fillText("Press P and hold mouse to paint objects",405,140+scrollY)
+			canvas.fillText("Press J to import picture from JSON",405,155+scrollY)
+			canvas.fillText("Press L to select a drawing to paint with",405,170+scrollY)
+			canvas.fillText("Press Z to undo most actions",405,185+scrollY)
+			canvas.fillText("WASD to move the screen",405,200+scrollY)
 		}
 		else
 		{
