--- a/Dumbgeon.html
+++ b/Dumbgeon.html
@@ -1269,8 +1269,8 @@ function animate() {
 		}
 		if (selectedObjectUUID <= -1)
 		{
-			canvas.fillText("Dumbgeon!: ",405,10+scrollY)
-			canvas.fillText("By Daxturus",405,25+scrollY)
+			canvas.fillText("Dumbgeon! The Dungeon Master's Tool",405,10+scrollY)
+			canvas.fillText("By Daxturus, for friends.",405,25+scrollY)
 			canvas.fillText("Controls: ",405,50+scrollY)
 			canvas.fillText("Press N to create an object",405,65+scrollY)
 			canvas.fillText("Click on an object to drag it",405,80+scrollY)
