--- a/Dumbgeon.html
+++ b/Dumbgeon.html
@@ -17,7 +17,7 @@ var draggingObjectUUID;
 var cursorX = 0
 var cursorY = 0
 var scrollY = 0
-var PIDscrollY = 0
+var PIDscrollY = -150
 //var scrollX = 0 //no need for this now
 
 var mouseWheelDeltaYFrame = 0
@@ -59,6 +59,7 @@ drawings.push([JSON.parse("[[[0.144,0.253],[0.184,0.248],[0.21,0.238],[0.24,0.23
 drawings.push([JSON.parse("[[[0.56,0.874],[0.558,0.878],[0.552,0.88],[0.548,0.884],[0.546,0.888],[0.542,0.894],[0.532,0.902],[0.516,0.904],[0.446,0.884],[0.408,0.866],[0.354,0.832],[0.29,0.786],[0.224,0.726],[0.166,0.672],[0.142,0.652],[0.138,0.648],[0.14,0.61],[0.144,0.434],[0.166,0.386],[0.204,0.326],[0.25,0.266],[0.298,0.212],[0.354,0.168],[0.42,0.138],[0.498,0.114],[0.558,0.102],[0.664,0.112],[0.734,0.146],[0.842,0.234],[0.908,0.314],[0.946,0.392],[0.958,0.452],[0.952,0.58],[0.946,0.664],[0.926,0.736],[0.892,0.786],[0.846,0.826],[0.802,0.856],[0.76,0.876],[0.688,0.886],[0.504,0.884],[0.406,0.888],[0.382,0.88]],[[0.554,0.492],[0.558,0.49],[0.568,0.494],[0.57,0.498],[0.574,0.51],[0.572,0.52],[0.566,0.522],[0.548,0.516],[0.546,0.502],[0.552,0.488]],[[0.564,0.482],[0.566,0.352],[0.568,0.328],[0.572,0.3],[0.574,0.28],[0.576,0.256],[0.578,0.21],[0.58,0.204]],[[0.57,0.506],[0.576,0.504],[0.59,0.498],[0.608,0.492],[0.622,0.488],[0.634,0.484],[0.65,0.478],[0.674,0.468],[0.694,0.458],[0.72,0.452],[0.748,0.446],[0.782,0.444],[0.786,0.442],[0.79,0.44],[0.796,0.436],[0.806,0.432],[0.818,0.426],[0.832,0.42],[0.836,0.416]],[]]"),-12])
 drawings.push([JSON.parse("[[[0.138,0.136],[0.142,0.184],[0.148,0.228],[0.156,0.29],[0.158,0.342],[0.154,0.482],[0.156,0.596],[0.162,0.66],[0.164,0.708],[0.162,0.774],[0.16,0.806],[0.158,0.824],[0.16,0.902],[0.286,0.898],[0.354,0.888],[0.452,0.886],[0.572,0.898],[0.688,0.912],[0.85,0.908],[0.876,0.902],[0.886,0.898],[0.892,0.894],[0.9,0.886],[0.906,0.876],[0.908,0.87],[0.906,0.832],[0.902,0.81],[0.892,0.772],[0.872,0.708],[0.858,0.64],[0.856,0.584],[0.864,0.398],[0.872,0.314],[0.878,0.264],[0.88,0.206],[0.872,0.164],[0.87,0.134],[0.868,0.116],[0.866,0.112],[0.836,0.118],[0.808,0.124],[0.77,0.13],[0.736,0.132],[0.694,0.134],[0.416,0.132],[0.348,0.128],[0.254,0.124],[0.14,0.126],[0.138,0.128],[0.13,0.132],[0.128,0.134]],[[0.33,0.272],[0.318,0.276],[0.308,0.282],[0.292,0.304],[0.286,0.328],[0.29,0.372],[0.296,0.378],[0.312,0.384],[0.332,0.386],[0.356,0.384],[0.372,0.372],[0.384,0.352],[0.392,0.336],[0.382,0.266],[0.366,0.25],[0.354,0.242],[0.346,0.24],[0.33,0.244],[0.32,0.25],[0.316,0.254]],[[0.674,0.252],[0.654,0.274],[0.636,0.304],[0.624,0.336],[0.618,0.364],[0.62,0.392],[0.626,0.396],[0.642,0.398],[0.664,0.394],[0.694,0.37],[0.71,0.346],[0.72,0.32],[0.732,0.3],[0.738,0.286],[0.73,0.272],[0.716,0.27]],[[0.326,0.468],[0.316,0.486],[0.304,0.5],[0.29,0.516],[0.28,0.532],[0.27,0.554],[0.282,0.598],[0.304,0.612],[0.344,0.614],[0.364,0.61],[0.376,0.604],[0.384,0.594],[0.392,0.576],[0.4,0.554],[0.402,0.538],[0.398,0.528],[0.382,0.522],[0.346,0.528]],[[0.704,0.466],[0.674,0.472],[0.654,0.486],[0.636,0.51],[0.624,0.542],[0.62,0.578],[0.618,0.608],[0.628,0.614],[0.694,0.602],[0.718,0.588],[0.73,0.574],[0.736,0.562],[0.73,0.518],[0.704,0.498],[0.674,0.488]],[[0.336,0.686],[0.316,0.69],[0.3,0.704],[0.286,0.718],[0.276,0.73],[0.272,0.746],[0.268,0.762],[0.27,0.776],[0.282,0.78],[0.302,0.786],[0.33,0.794],[0.366,0.804],[0.43,0.79],[0.442,0.774],[0.446,0.758],[0.448,0.746],[0.446,0.734],[0.43,0.716],[0.406,0.694],[0.37,0.67],[0.33,0.65],[0.32,0.648],[0.316,0.65]],[[0.72,0.644],[0.692,0.658],[0.668,0.678],[0.648,0.704],[0.634,0.732],[0.624,0.756],[0.618,0.766],[0.624,0.776],[0.698,0.796],[0.782,0.786],[0.786,0.776],[0.788,0.764],[0.786,0.748],[0.774,0.726],[0.756,0.698],[0.73,0.67],[0.71,0.664],[0.688,0.67]],[]]"),-13])
 drawings.push([JSON.parse("[[[0.058,0.11],[0.072,0.138],[0.082,0.166],[0.102,0.196],[0.126,0.224],[0.162,0.26],[0.216,0.31],[0.298,0.388],[0.32,0.408],[0.33,0.412]],[[0.334,0.408],[0.346,0.392],[0.366,0.372],[0.386,0.346],[0.412,0.32],[0.442,0.286],[0.454,0.264],[0.47,0.24],[0.486,0.22],[0.502,0.2],[0.512,0.186],[0.516,0.176]],[[0.058,0.094],[0.076,0.098],[0.114,0.102],[0.168,0.108],[0.23,0.114],[0.266,0.118],[0.306,0.12],[0.34,0.124],[0.38,0.126],[0.444,0.128],[0.514,0.13],[0.532,0.132],[0.546,0.134],[0.55,0.136],[0.558,0.142],[0.572,0.148],[0.582,0.154]],[[0.182,0.158],[0.174,0.16],[0.172,0.164],[0.17,0.168],[0.168,0.178],[0.174,0.198],[0.18,0.204],[0.184,0.206],[0.208,0.204],[0.214,0.2],[0.216,0.198],[0.218,0.188],[0.22,0.178],[0.212,0.154],[0.206,0.15],[0.202,0.148]],[[0.386,0.174],[0.376,0.182],[0.364,0.188],[0.356,0.194],[0.35,0.204],[0.346,0.214],[0.352,0.234],[0.36,0.236],[0.374,0.238],[0.386,0.236],[0.396,0.23],[0.4,0.22],[0.402,0.212],[0.4,0.192],[0.398,0.19],[0.396,0.188],[0.39,0.182],[0.384,0.178]],[[0.28,0.272],[0.274,0.276],[0.28,0.312],[0.286,0.318],[0.296,0.322],[0.306,0.326],[0.318,0.324],[0.326,0.308],[0.32,0.276],[0.31,0.268],[0.306,0.264]],[[0.326,0.7],[0.348,0.678],[0.366,0.66],[0.382,0.642],[0.4,0.624],[0.416,0.604],[0.436,0.586],[0.454,0.566],[0.478,0.544],[0.498,0.522],[0.518,0.502],[0.534,0.482],[0.548,0.47],[0.564,0.452],[0.578,0.438],[0.59,0.426],[0.598,0.416],[0.604,0.412],[0.608,0.406],[0.61,0.402],[0.612,0.4],[0.614,0.398]],[[0.61,0.4],[0.624,0.422],[0.64,0.442],[0.654,0.466],[0.668,0.49],[0.68,0.514],[0.694,0.54],[0.712,0.568],[0.734,0.596],[0.75,0.614],[0.768,0.634],[0.782,0.652],[0.798,0.674],[0.816,0.69],[0.828,0.702],[0.834,0.706],[0.84,0.71],[0.842,0.714],[0.844,0.716],[0.848,0.718],[0.852,0.726],[0.856,0.728],[0.858,0.732]],[[0.86,0.736],[0.858,0.74],[0.848,0.752],[0.842,0.764],[0.816,0.79],[0.796,0.81],[0.772,0.836],[0.752,0.858],[0.736,0.876],[0.726,0.894],[0.718,0.906],[0.712,0.912],[0.71,0.916],[0.708,0.92],[0.706,0.922],[0.704,0.924],[0.702,0.928]],[[0.694,0.938],[0.674,0.94],[0.63,0.942],[0.612,0.944],[0.586,0.948],[0.496,0.95],[0.468,0.954],[0.452,0.956],[0.436,0.958],[0.404,0.96],[0.39,0.962]],[[0.386,0.956],[0.382,0.94],[0.376,0.92],[0.37,0.898],[0.366,0.878],[0.362,0.858],[0.358,0.838],[0.348,0.812],[0.332,0.776],[0.33,0.76],[0.328,0.748],[0.326,0.732],[0.324,0.718],[0.316,0.702],[0.314,0.694],[0.312,0.68]],[[0.566,0.676],[0.554,0.68],[0.548,0.688],[0.538,0.696],[0.528,0.704],[0.518,0.714],[0.506,0.734],[0.5,0.75],[0.498,0.768],[0.502,0.79],[0.508,0.798],[0.512,0.804],[0.522,0.808],[0.534,0.812],[0.554,0.816],[0.584,0.812],[0.602,0.802],[0.608,0.796],[0.61,0.788],[0.612,0.778],[0.608,0.766],[0.606,0.756],[0.6,0.748],[0.594,0.736],[0.588,0.73],[0.582,0.722],[0.57,0.716],[0.564,0.712],[0.558,0.71],[0.552,0.708],[0.542,0.704],[0.532,0.702]],[]]"),-14])
+drawings.push([JSON.parse("[[[0.284,0.574],[0.288,0.564],[0.298,0.546],[0.312,0.522],[0.328,0.498],[0.35,0.468],[0.372,0.436],[0.396,0.414],[0.424,0.394],[0.446,0.376],[0.468,0.352],[0.496,0.318],[0.512,0.296],[0.526,0.28],[0.54,0.262],[0.554,0.244],[0.566,0.224],[0.576,0.206],[0.584,0.192],[0.594,0.18],[0.598,0.174],[0.6,0.168],[0.602,0.164]],[[0.592,0.672],[0.6,0.662],[0.614,0.644],[0.624,0.62],[0.634,0.592],[0.648,0.558],[0.666,0.526],[0.694,0.482],[0.722,0.44],[0.744,0.396],[0.758,0.364],[0.766,0.336],[0.776,0.316],[0.788,0.29],[0.796,0.274],[0.806,0.254],[0.812,0.238],[0.814,0.22],[0.816,0.208],[0.82,0.2],[0.822,0.196],[0.824,0.194],[0.826,0.188],[0.828,0.184],[0.832,0.176]],[[0.282,0.574],[0.29,0.572],[0.298,0.568],[0.312,0.564],[0.326,0.562],[0.35,0.558],[0.398,0.562],[0.444,0.556],[0.456,0.554],[0.462,0.55],[0.464,0.548],[0.468,0.546],[0.472,0.544],[0.484,0.558],[0.49,0.572],[0.498,0.588],[0.506,0.6],[0.516,0.61],[0.524,0.62],[0.538,0.636],[0.548,0.646],[0.554,0.652],[0.558,0.656],[0.562,0.66],[0.564,0.664],[0.57,0.668],[0.574,0.67],[0.576,0.672],[0.578,0.674],[0.582,0.676]],[[0.584,0.68],[0.58,0.686],[0.578,0.692],[0.574,0.698],[0.57,0.704],[0.56,0.712],[0.548,0.718],[0.538,0.726],[0.532,0.73],[0.528,0.734],[0.522,0.738],[0.508,0.746],[0.502,0.75],[0.494,0.754],[0.488,0.756],[0.48,0.758],[0.468,0.76],[0.462,0.762],[0.456,0.766],[0.448,0.77],[0.438,0.774],[0.43,0.776],[0.424,0.78],[0.418,0.782],[0.412,0.786],[0.406,0.788],[0.4,0.79],[0.392,0.794],[0.384,0.798],[0.378,0.802],[0.366,0.806],[0.356,0.81],[0.354,0.812],[0.35,0.814],[0.348,0.816],[0.342,0.802],[0.338,0.79],[0.334,0.776],[0.332,0.766],[0.33,0.75],[0.326,0.73],[0.318,0.708],[0.314,0.694],[0.31,0.684],[0.306,0.658],[0.302,0.642],[0.3,0.636],[0.298,0.624],[0.296,0.614],[0.294,0.608],[0.292,0.606],[0.29,0.6],[0.288,0.59],[0.286,0.586],[0.284,0.566]],[[0.31,0.702],[0.322,0.7],[0.336,0.694],[0.35,0.692],[0.39,0.694],[0.398,0.698],[0.406,0.7],[0.412,0.702],[0.418,0.708],[0.422,0.71],[0.424,0.716],[0.426,0.72],[0.43,0.728],[0.432,0.732],[0.434,0.736],[0.436,0.738],[0.438,0.744],[0.44,0.748],[0.442,0.752],[0.444,0.756],[0.446,0.77]],[[0.598,0.164],[0.614,0.17],[0.622,0.174],[0.63,0.176],[0.642,0.178],[0.654,0.182],[0.664,0.186],[0.676,0.188],[0.684,0.194],[0.694,0.198],[0.702,0.2],[0.71,0.202],[0.716,0.204],[0.726,0.208],[0.736,0.21],[0.746,0.214],[0.756,0.216],[0.766,0.218],[0.774,0.22],[0.784,0.222],[0.788,0.224],[0.792,0.226],[0.796,0.228],[0.8,0.23],[0.806,0.232],[0.808,0.234],[0.816,0.236]],[[0.594,0.162],[0.6,0.152],[0.606,0.148],[0.608,0.144],[0.614,0.138],[0.616,0.134],[0.618,0.122],[0.62,0.116],[0.622,0.112],[0.624,0.108],[0.626,0.094],[0.628,0.092],[0.63,0.084],[0.632,0.08],[0.644,0.082],[0.664,0.09],[0.68,0.094],[0.69,0.098],[0.7,0.102],[0.73,0.11],[0.748,0.116],[0.766,0.118],[0.77,0.12],[0.794,0.122],[0.802,0.124],[0.816,0.126],[0.82,0.128],[0.826,0.13],[0.83,0.134],[0.832,0.138],[0.836,0.14],[0.832,0.158],[0.83,0.162],[0.826,0.164],[0.824,0.172],[0.822,0.174],[0.82,0.182],[0.818,0.188]],[[0.472,0.542],[0.482,0.54],[0.488,0.538],[0.498,0.53],[0.504,0.52],[0.518,0.508],[0.53,0.496],[0.544,0.482],[0.562,0.468],[0.576,0.452],[0.594,0.432],[0.626,0.402],[0.642,0.382],[0.654,0.366],[0.67,0.35],[0.684,0.33],[0.7,0.312],[0.712,0.292],[0.72,0.274],[0.726,0.262],[0.728,0.25],[0.732,0.24],[0.736,0.23],[0.738,0.214],[0.74,0.206]],[]]"),-15])
 drawings.reverse()
 //created by Daxturus
 
@@ -785,6 +786,7 @@ function animate() {
 			}
 		}
 		canvas.fillStyle = "#000000"
+		var DeletePictures = []
 		for (var i = 0; i < drawings.length; i++)
 		{
 			var PictureXPos = 105+50*(i % 5)
@@ -794,19 +796,67 @@ function animate() {
 				canvas.beginPath()
 				canvas.rect(PictureXPos,PictureYPos,50,50)
 				canvas.stroke()
+				canvas.beginPath()
+				canvas.rect(PictureXPos+30,PictureYPos+15,15,15)
+				canvas.stroke()
+				drawSomething(-15,PictureXPos+30,PictureYPos+15,15,15)
+				if (drawings[i][1] >= 0)
+				{
+					canvas.beginPath()
+					canvas.rect(PictureXPos+30,PictureYPos+30,15,15)
+					canvas.stroke()
+					drawSomething(-6,PictureXPos+30,PictureYPos+30,15,15)
+				}
 				canvas.fillText("ID: "+drawings[i][1],PictureXPos+2,PictureYPos+10)
+				drawSomething(drawings[i][1],PictureXPos,PictureYPos+15,30,30)
 				if (mouseDown == true)
 				{
 					if (cursorX < 400 && cursorX > 105 && cursorY < 50 && cursorY > 0)
 					{
 						if (cursorX > PictureXPos && cursorX < PictureXPos+50 && cursorY > PictureYPos && cursorY < PictureYPos + 50)
 						{
-							paintingUUID = drawings[i][1]
-							mouseDown = false
+							if (drawings[i][1] >= 0 && cursorX > PictureXPos + 30 && cursorX < PictureXPos + 45 && cursorY > PictureYPos + 30 && cursorY < PictureYPos + 45)
+							{
+								DeletePictures.push(drawings[i][1])
+							}
+							else
+							{
+								if (cursorX > PictureXPos + 30 && cursorX < PictureXPos + 45 && cursorY > PictureYPos + 15 && cursorY < PictureYPos + 30)
+								{
+									var outTXT = window.prompt("Enter new JSON data to replace this picture with:",drawings[i][0])
+									if (outTXT.length > 0)
+									{
+										var outParsed = JSON.parse(outTXT)
+										if (outParsed.length > 0)
+										{
+											drawings[i][0] = outParsed
+										}
+										else
+										{
+											alert("Parsed JSON data is either blank or incorrect. Try again.")
+										}
+									}
+									else
+									{
+										alert("Entry is blank. Try again.")
+									}
+								}
+								paintingUUID = drawings[i][1]
+								mouseDown = false
+							}
 						}
 					}
 				}
-				drawSomething(drawings[i][1],PictureXPos+5,PictureYPos+15,30,30)
+			}
+		}
+		for (var i = 0; i < DeletePictures.length; i++)
+		{
+			for (var j = 0; j < drawings.length; j++)
+			{
+				if (drawings[j][1] == DeletePictures[i])
+				{
+					drawings.splice(j, 1);
+				}
 			}
 		}
 		canvas.fillStyle = "#ffffff"
