--- a/Dumbgeon.html
+++ b/Dumbgeon.html
@@ -1335,6 +1335,7 @@ function animate() {
 			canvas.fillText("Press L to select a drawing to paint with",405,170+scrollY)
 			canvas.fillText("Press Z to undo most actions",405,185+scrollY)
 			canvas.fillText("WASD to move the screen",405,200+scrollY)
+			canvas.fillText("Selection and drawings menus are scrollable",405,215+scrollY)
 		}
 		else
 		{
